--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'Headings';
     src: url('/assets/fonts/BebasNeue.woff');
@@ -17,7 +16,7 @@
 body {
     font-family: 'Body';
     background-color: #fafafa; 
-    color: rgb(38,);
+    color: rgb(38,38,38);
  }
 
 h1, h3{
@@ -30,10 +29,48 @@ h1 {
     text-align: center;
 }
 
+.blue {
+    color: rgb(0,77,139);
+}
+
+.center {
+    text-align: center;
+}
+
+.btn {
+    align: center;
+}
+
+.btn-primary {
+    color: white;
+    background-color: rgb(233,130,51);
+    border: 0;
+    padding: 14px 0;
+    min-width: 96px;
+    width: 50%;
+}
+
+.fa-btn {
+    margin-right: 6px;
+}
+
+.panel-default{
+    padding: 0;
+}
+
+.panel-default .panel-heading {
+    background-color: rgb(232,131,52);
+    border: 0px;
+}
+
 .navbar-default {
     background-color: #fafafa;
-    border-color: rgb(233,130,51);
+    border-color: rgb(232,131,52);
     border-width: 8px 0 0 0; 
+}
+
+.navbar-default .navbar-toggle {
+    border: 0;
 }
 
 .navbar-nav>li {
@@ -56,11 +93,6 @@ h1 {
 
 @media (min-width: 768px) {
 
-    .navbar-default .navbar-nav>li>a {
-    	padding-top: 40px;
-    	text-align: center;
-    }
-
     .navbar {
     	height: 84px;
     }
@@ -69,23 +101,23 @@ h1 {
     	border-width: 0 0 8px 0;
     	min-width: 120px;
     }
+
+    .navbar-default .navbar-nav>li>a {
+        padding-top: 40px;
+        text-align: center;
+    }
+
 }
 
-.btn-primary {
-    color: white;
-    background-color: rgb(233,130,51);
-    border: 0;
-    padding: 14px 64px;
+@media (min-width: 992px) {
+
+    .narrow {
+        padding-left: 2px;
+        padding-right: 2px;
+    }
 }
 
-.btn {
-    align: center;
-}
 
-.navbar-default .navbar-toggle {
-   	border: 0;
-}
 
-.fa-btn {
-    margin-right: 6px;
-}
+
+
