--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -25,6 +25,12 @@ a.btn.btn-link {
     padding-left: 0;
 }
 
+.btn-primary{
+    max-width: 150px;
+    width: 50%;
+    height:44px;
+}
+
 .form-group {
     padding: 2% 8% 2% 8%;
 }
