--- a/public/assets/css/requests.css
+++ b/public/assets/css/requests.css
@@ -1,19 +1,16 @@
-
+@media (min-width: 1202px){
+	div#requestTHeadSort{
+		display:none;
+	}
+}
 
 thead {
 	background-color: rgb(0,77,134);
 	color: white;
 	font-size: 12px;
- 
-}
-
-th {
-	min-width: 13px;
-	padding: 24;
 	text-align: center;
 	color: white;
 	text-transform: uppercase;
-	font-weight: normal;
 	font-family: 'Nav';
 }
 
@@ -28,8 +25,17 @@ th > a:hover{
 td {
 	min-width: 100px;
 	text-align: center;
-	font-size: 12px;
+	font-size: 14px;
 }
+
+tr:nth-child(even){
+	background-color: #F2F6F9;
+}
+tr#override td{
+	border:0;
+	vertical-align: middle;
+}
+
 td#progressColumn{
 	text-transform: uppercase;
 }
@@ -42,10 +48,58 @@ td#progressColumn{
 	text-align: center;
 }
 
-.row .table {
-	overflow: scroll;
-	padding: 0;
-	margin: 0 15px;
+td#buttoncontainer ul > form > li {
+	min-width: 70px;
+	font-size: 14px;
+	padding: 2px;
+}
+td#buttoncontainer ul > form > li .btn {
+	min-height: 29px;
+    min-width: 75px;
 }
 
+td#buttoncontainer ul > form > li .btn-primary{
+	width: 87px;
+}
 
+td#buttoncontainer ul > form > li > a{
+	float: right;
+}
+
+thead#requestTHEad > tr > th, thead#userTHEad > tr > th,
+thead#reqTypeTHEad > tr > th, thead#insTypesTHEad > tr > th  {
+	vertical-align: middle;
+	font-weight: normal;
+}
+
+thead#requestTHEad > tr {
+	min-height: 100px;
+}
+
+.bgblue {
+	background-color: rgb(0,77,134);
+}
+.row .table {
+	margin: 0;
+	padding: 0;
+}
+
+ul {
+	display:inline;  
+	list-style: none;
+	padding: 0;
+}
+
+li {
+	padding: 8px 15px;
+}
+
+.upper {
+	text-transform: uppercase;
+	font-size: 15px;
+}
+.left {
+	float: right;
+}
+
+}
