--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -39,6 +39,10 @@ i, b{
     text-transform: uppercase;
 }
 
+li#adminButton > a:focus{
+    background-color: #f3f3f3;
+}
+
 .alert {
     margin-top: 5%;
 }
@@ -71,15 +75,13 @@ i, b{
 .dropdown-menu > li{
     border-left: 8px solid;
     border-color: transparent;
+    min-height: 40px;
+    margin-left: 0;
+    padding: 8px;
 }
 
-.dropdown-menu > li:hover{
-    border-color: rgb(233,130,51);
-    background-color: #f2f2f2;
-}
-
+.dropdown-menu > li:hover,
 .dropdown-menu > li:focus{
-    border-color: rgb(233,130,51);
     background-color: #f2f2f2;
 }
 
